Bullet Continuous Collision Detection and Physics Library
Primary author and maintainer: Erwin Coumans

2007 Aug 15
	- fixed bug in Extras/GIMPACT 0.2 related to moving triangle meshes
	Thanks Thomas, http://www.continuousphysics.com/Bullet/phpBB2/viewtopic.php?t=1368

2007 Aug 14
	- added parallel constraint solver. Works on Playstation 3 Cell SPU and multi core (Win Threads on PC and XBox 360).
	  See Extras/BulletMultiThreaded for SpuSolverTask subfolder and SpuParallelSolver.cpp
	  Thanks Marten Svanfeldt (Starbreeze Studios)	
	- fixed some bugs related to parallel collision detection (Extras/BulletMultiThreaded)
	  Thanks Marten Svanfeldt (Starbreeze Studios)	
	
2007 Aug 2
	- added compound and concave-convex (swapped) case for BulletMultiThreaded collision detection, thanks to Marten Svanfeldt
	- refactored broadphase and overlapping pair cache. This allows performance improvement by combining multiple broadphases. This helps add/remove of large batches of objects and large worlds. See also Pierre Terdiman forum topic:
	http://www.continuousphysics.com/Bullet/phpBB2/viewtopic.php?t=1329


2007 July 27
	- added Ragdoll Demo
		Thanks to Marten Svanfeldt (Starbreeze Studios)

	- added Vector Math library for SIMD 3D graphics linear algebra (vector, matrix, quaternion)
		See Bullet/Extras/vectormathlibrary
		Supports SIMD SSE, PowerPC PPU and Cell SPU (including PS3 Linux and CellBlade), as well as generic portable scalar version
		Will be used to improve BulletMultiThreaded performance
		Open Sourced by Sony Computer Entertainment Inc. under the new BSD license
	- added SIMD math library
		4-way SIMD for common math functions like atan2f4, cosf4, floorf4, fabsf4, rsqrtf4 etc. Used by Vector Math library under PPU and SPU.
		Supports PowerPC (PPU) and Cell SPU, including PS3 Linux and CellBlade.
		See Bullet/Extras/simdmathlibrary
		Open sourced by Sony Computer Entertainment Inc. under the new BSD license

	
2007 July 25